--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Na prática - Álbum de fotos com flexbox</title>
-    <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\style.css">
+    <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\estilo.css">
+    <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\media.css">
 </head>
 <body>
     <header>
