--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Na prática - Álbum de fotos com flexbox</title>
     <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\estilo.css">
-    <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\media.css">
+    <link rel="stylesheet" href="C:\Users\Aluno\Documents\fotos\medias.css">
 </head>
 <body>
     <header>
