--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Código HTML e CSS na prática - Álbum de fotos</h1>
+        <h1>Meu álbum de fotos fofinhas</h1>
     </header>
     <main id="album">
         <section class="coluna">
